--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,30 @@
-<h1>Burgers!</h1>
+<!--- Home Section --->
+<div id="home">
+
+  <!--- Navigation --->
+  <nav class="navbar fixed-top d-flex justify-content-center">
+    <a class="navbar-brand" href="#">
+      <img src="/assets/images/logo.png" width="75" height="80" class="d-inline-block align-top" alt="">
+      <img src="/assets/images/logo2.png" width="145" height="80" class="d-inline-block align-top" alt="">
+      </a>
+  </nav>
+  <!-- End Navigation --->
+
+  
+</div>
+
+
+{{!-- <h1>Burgers!</h1>
 
 <ul>
   {{#each burgers}}
     {{#unless devoured}}
-      <li>{{this.burger_name}}</li>
+      <li>
+        <figure>
+          <img src="/assets/images/burger.png" alt="">
+          <figcaption>{{this.burger_name}}</figcaption>
+        </figure>
+      </li>
     {{/unless}}
   {{/each}}
-</ul>
+</ul> --}}
