--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,40 @@
   </nav>
   <!-- End Navigation --->
 
-  
+  <!--- Landing Page Sectipn --->
+  <div class="container">
+    <div class="row">
+
+      <!--- Burgers --->
+      <div id="burgers" class="col-12">
+        {{!-- <img src="./assets/images/banner.png" alt="" srcset=""> --}}
+        <h1 class="text-center mt-5">Signature Choices</h1>
+        <div class="col-4 mt-5">
+          <div class="card text-dark burger-card">
+            <img src="/assets/images/the-true-north.png" class="card-img ml-5 mt-5 mb-4" alt="..." style="width: 75%;">
+            <div class="card-img-overlay">
+              <h6 class="card-title text-right">
+                <span class="text-danger"><i class="fas fa-heart"></i></span> 
+                300 Likes
+              </h6>
+            </div>
+            <p class="card-text text-center mb-4">Aged Cheddar, Bacon, Signature Sauce, Maple Infused Onions.</p>
+            <div class="buttons mb-5 d-flex justify-content-center">
+              <button class="btn btn-dark pr-4 pl-4 mr-2">Add</button>
+              <button class="btn btn-warning">Devaour</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End Burgers --->
+
+      <!--- Order Cart Section --->
+      <div class="col-4"></div>
+      <!--- End Orger Cart Section --->
+
+    </div>
+  </div>
+  <!--- End Landing Page Section --->
 </div>
 
 
