--- a/views/devour.handlebars
+++ b/views/devour.handlebars
@@ -31,7 +31,7 @@
       <div class="list-group">
         {{#each burgers}}
           {{#if devoured}}
-            <div class="card mb-3" style="max-width: 540px;">
+            <div class="card mb-1" style="max-width: 540px;">
               <div class="row no-gutters">
                 <div class="col-md-4">
                   <img src="{{this.img_url}}" class="card-img" alt="...">
@@ -41,7 +41,15 @@
                     <h5 class="card-title">{{this.burger_name}}</h5>
                     <p class="card-text">{{this.burger_info}}</p>
                     {{!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> --}}
+                    <div class="card-button mb-4">
+                      <button 
+                      data-id="{{this.id}}" 
+                      onclick="handleClick.call(this)" class="btn btn-dark text-center pl-3 pr-3">
+                        <i class="fas fa-hamburger"></i> Devour it!
+                      </button>
                   </div>
+                  </div>
+                  
                 </div>
               </div>
             </div>
