--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,6 @@
+{{> navbar}}
 <div class="container">
-  <h1 class="text-center mt-5 mb-5">Signature Choices</h1>
+  <h1 class="text-center pt-5 mb-5">Signature Choices</h1>
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3">
       {{#each burgers}}
         <div class="col md-4">
