--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,26 +3,7 @@
   <h1 class="text-center pt-5 mb-5">Signature Choices</h1>
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3">
       {{#each burgers}}
-        <div class="col md-4">
-          <div class="card mb-4">
-            <img src="{{this.img_url}}" class="card-img-top" alt="...">
-            <div class="card-body">
-              {{!-- <h5 class="card-title">Card title</h5> --}}
-              <p class="card-text" style="font-size: 13px;">{{this.burger_info}}</p>
-            </div>
-            <div class="card-button d-flex justify-content-center mb-4">
-              <a 
-              href="/devour"
-              data-id="{{this.id}}" 
-              onclick="handleClick.call(this)" class="btn btn-warning text-black text-center pl-4 pr-4">
-                <i class="fas fa-hamburger"></i> Add
-              </a>
-            </div>
-            <div class="card-footer text-right">
-              <span class="text-danger"><i class="fas fa-heart"></i></span> {{this.num_of_likes}} Likes
-            </div>
-          </div>
-        </div>
+        {{> burger this}}        
       {{/each}}
   </div>
 </div>
