feat: Add list of options to make a custom burger

--- a/views/partials/modal.handlebars
+++ b/views/partials/modal.handlebars
@@ -13,7 +13,10 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-warning text-white">Devour!</button>
+        <a
+          href="/byob" 
+          type="button" 
+          class="btn btn-warning text-white">Devour!</a>
       </div>
     </div>
   </div>
