feat: User can add byop custom burger

--- a/views/partials/form.handlebars
+++ b/views/partials/form.handlebars
@@ -1,21 +1,10 @@
-<div class="container pt-5">
+<div class="container pt-4">
   <form>
     <h1 class="text-center">On the Grill</h1>
   <div class="form-group row">
-    
-    <div class="col-md-4">
-        <div class="form-check">
-          <label class="form-check-label" for="gridCheck1">
-            <div class="card" style="width: 18rem;">
-            <img src="./assets/images/byob-veggie.png" class="card-img-top" alt="...">
-            <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            </div>
-          </label>
-          <input class="form-check-input" type="checkbox" id="gridCheck1">
-        </div>
-    </div>
+    {{#each grills}}
+      {{> grill this}}        
+    {{/each}}
   </div>
   <h1 class="text-center mt-5">Gourmet Toppings</h1>
   <div class="form-group row">
@@ -60,48 +49,11 @@
       </div>
     </div>
   </div>
-  <div class="form-button d-flex justify-content-center mt-5">
-    <button type="submit" class="btn btn-warning btn-large text-white">Devour!</button>
+  <div class="form-group row mt-5 mb-5">
+    <input type="text" class="form-control col-md-4 offset-md-4" placeholder="Name your burger!" aria-label="Burger's name" aria-describedby="burger_name">
+    <div class="form-group-append">
+      <button class="btn btn-warning" type="button" id="button-burger" onclick="handleBurgerSubmit()">Devour!</button>
+    </div>
   </div>
   </form>
 </div>
-
-    {{!-- <div class="form-group col-md-6">
-      <label for="inputPassword4">Password</label>
-      <input type="password" class="form-control" id="inputPassword4">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="inputAddress">Address</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-  </div>
-  <div class="form-group">
-    <label for="inputAddress2">Address 2</label>
-    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputCity">City</label>
-      <input type="text" class="form-control" id="inputCity">
-    </div>
-    <div class="form-group col-md-4">
-      <label for="inputState">State</label>
-      <select id="inputState" class="form-control">
-        <option selected>Choose...</option>
-        <option>...</option>
-      </select>
-    </div>
-    <div class="form-group col-md-2">
-      <label for="inputZip">Zip</label>
-      <input type="text" class="form-control" id="inputZip">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="gridCheck">
-      <label class="form-check-label" for="gridCheck">
-        Check me out
-      </label>
-    </div>
-  </div> --}}
-  {{!-- <button type="submit" class="btn btn-primary">Sign in</button> --}}
